<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubmitActivity">

    <ImageView
        android:id="@+id/img_background_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_background_project"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <Button
        android:id="@+id/btn_submit_project"
        style="@style/ButtonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btn_submit_project"
        app:layout_constraintEnd_toEndOf="@+id/text_project_github"
        app:layout_constraintStart_toStartOf="@+id/text_project_github"
        app:layout_constraintTop_toBottomOf="@+id/text_project_github" />

    <EditText
        android:id="@+id/text_last_name"
        style="@style/EditTextProject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/text_last_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/text_first_name"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_first_name"
        style="@style/EditTextProject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/text_first_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/text_last_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_email"
        style="@style/EditTextProject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/text_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/text_last_name"
        app:layout_constraintStart_toStartOf="@+id/text_first_name"
        app:layout_constraintTop_toBottomOf="@+id/text_first_name" />

    <EditText
        android:id="@+id/text_project_github"
        style="@style/EditTextProject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/text_project_github"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/text_email"
        app:layout_constraintStart_toStartOf="@+id/text_email"
        app:layout_constraintTop_toBottomOf="@+id/text_email" />

</androidx.constraintlayout.widget.ConstraintLayout>